# pamsoft_grid_operator

./: .gitignore  .gitmodules  ARCHITECTURE_COMPARISON.md  Dockerfile  README.md  aux_functions.R  aux_functions_refactored.R  main.R  main_python.py  main_refactored.R  operator.json  pyproject.toml  workspace.R
.github/workflows/: ci.yml  release.yml  tercen-ci.yml
tests/: input.csv  table1.csv  table2.csv  test.json
