[project]
name = "pamsoft-grid-operator"
version = "2.0.0"
description = "Tercen operator for pamsoft grid analysis with MATLAB batch processing"
requires-python = ">=3.9,<3.13"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.22.0,<1.23.0",
    "pillow>=9.0.0",
    "python-dateutil>=2.8.0",
    "tercen_python_client @ git+https://github.com/tercen/tercen_python_client.git@0.12.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
# UV-specific configuration
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
